--- a/index.html
+++ b/index.html
@@ -380,9 +380,7 @@ setInterval(spawnHeart,700);
     </div>
 
     <div class="card glow">
-      <h3>Momentos Mem
-
-```html
+      <h3>Momentos Memoraveis
     </div>
   </div>
 </section>
