--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ setInterval(spawnHeart,700);
   <div class="features slide-up">
     <div class="card glow">
       <h3>Missões Românticas</h3>
-      <p>Desafios especiais que contam partes da nossa história.</p>
+      <p>Desafios especiais que contam partes da nossa história.</p> 
     </div>
 
     <div class="card glow">
@@ -380,7 +380,8 @@ setInterval(spawnHeart,700);
     </div>
 
     <div class="card glow">
-      <h3>Momentos Memoraveis
+      <h3>Momentos Memoraveis</h3>
+      <p>Cenas especiais que celebram nosso tempo juntos.</p>
     </div>
   </div>
 </section>
