--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ setInterval(spawnHeart,700);
     <div class="carousel-track">
       <img src="img1.jpg" alt="Imagem 1">
       <img src="img2.jpg" alt="Imagem 2">
-      <img src="img3.jpg" alt="Imagem 3">
+      <img src="img3.jpg" alt="Imagem Terceira">
     </div>
 
     <button class="carousel-btn next">❯</button>
@@ -480,5 +480,6 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
